# rust-finance

./: .dockerignore  .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  deny.toml  funding.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_hardening.yml
.github/workflows/: docker-build.yml  security.yml
crates/ai/: Cargo.toml
crates/ai/src/: anthropic_client.rs  compaction.rs  dexter.rs
crates/ai/src/client/: validator.rs
crates/alerts/: Cargo.toml
crates/backtest/: Cargo.toml
crates/cli/: Cargo.toml
crates/common/: Cargo.toml
crates/compliance/: Cargo.toml
crates/daemon/: Cargo.toml
crates/dashboard/: Cargo.toml
crates/event_bus/: Cargo.toml
crates/execution/: Cargo.toml
crates/execution/src/: trade_updates.rs
crates/feature/: Cargo.toml
crates/fix/: Cargo.toml
crates/ingestion/: Cargo.toml
crates/ingestion/src/: alpaca_ws.rs  finnhub_ws.rs  gap_detector.rs  reconnect.rs  service.rs
crates/ingestion/src/sources/: finnhub.rs  polymarket.rs
crates/knowledge_graph/: Cargo.toml
crates/metrics/: Cargo.toml
crates/ml/: Cargo.toml
crates/model/: Cargo.toml
crates/oms/: Cargo.toml
crates/persistence/: Cargo.toml
crates/polymarket/: Cargo.toml
crates/polymarket/src/: websocket.rs
crates/pricing/: Cargo.toml
crates/risk/: Cargo.toml
crates/risk/src/: portfolio_var.rs
crates/signals/: Cargo.toml
crates/strategy/: Cargo.toml
crates/swarm_sim/: Cargo.toml
crates/tests/: Cargo.toml
crates/tui/: Cargo.toml
crates/web/: Cargo.toml
crates/web-dashboard/: Cargo.toml
docs/funding/: active-2026.yml
