[package]
name = "backtest"
version = "0.1.0"
edition = "2021"
publish = false
description = "Historical backtesting framework for RustForge trading strategies"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "benchmark_audit"
path = "src/bin/benchmark_audit.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
