[package]
name = "event_bus"
version = "0.1.0"
edition = "2021"
publish = false
description = "Async event bus for inter-component communication in RustForge"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
common = { path = "../common" }
anyhow = "1.0"
tracing = "0.1"
tokio-retry = "0.3.0"
postcard = { version = "1.0", features = ["alloc"] }
