[package]
name = "execution"
version = "0.1.0"
edition = "2021"
publish = false
description = "Order execution gateway and broker integration for RustForge"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
common = { path = "../common" }
ingestion = { path = "../ingestion" }
async-trait = "0.1"
compact_str = "0.8"
anyhow = "1.0"
tracing = "0.1"

# Trade Update WebSocket
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
