[package]
name = "fix"
version = "0.1.0"
edition = "2021"
publish = false
description = "FIX protocol implementation for RustForge trading connectivity"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "sync", "time"] }
tracing = "0.1"
chrono = "0.4"
thiserror = "1.0"
