[package]
name = "knowledge_graph"
version = "0.1.0"
edition = "2021"
publish = false
description = "Financial entity knowledge graph for RustForge — petgraph-backed GraphRAG"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
petgraph      = { version = "0.6", features = ["serde-1"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tokio         = { version = "1", features = ["full"] }
tracing       = "0.1"
chrono        = { version = "0.4", features = ["serde"] }
anyhow        = "1"
# common = { path = "../common" }
