[package]
name = "metrics_lib"
version = "0.1.0"
edition = "2021"
publish = false
description = "Prometheus metrics and observability for RustForge"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false, features = ["http-listener"] }
tracing = "0.1.40"
