[package]
name = "risk"
version = "0.1.0"
edition = "2021"
publish = false
description = "Real-time risk management and position sizing for RustForge"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
common = { path = "../common" }
execution = { path = "../execution" }
ai = { path = "../ai" }
swarm_sim = { path = "../swarm_sim" }
compact_str = "0.8"
tracing = "0.1"
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
statrs = "0.16"
