[package]
name = "strategy"
version = "0.1.0"
edition = "2021"
publish = false
description = "Trading strategy framework and execution logic for RustForge"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
