[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false
description = "Integration test suite for RustForge"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
[dependencies]
common = { path = "../common" }
