[package]
name = "tui"
version = "0.1.0"
edition = "2021"
publish = false
description = "Terminal user interface for the RustForge trading dashboard"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ratatui = "0.29"
crossterm = "0.27"
anyhow = "1.0"
tokio = { version = "1.52", features = ["full"] }
common = { path = "../common" }
zeroize = { version = "1", features = ["zeroize_derive"] }
dotenvy = "0.15"
compact_str = "0.8"
postcard = { version = "1.0", features = ["alloc"] }
crossbeam-channel = "0.5"
serde_json = "1.0"
tokio-retry = "0.3.0"
ai = { version = "0.1.0", path = "../ai" }
swarm_sim = { version = "0.1.0", path = "../swarm_sim" }
chrono.workspace = true
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures = "0.3"
url = "2.5"
tracing = "0.1"
